Source/JavaScriptCore/dfg/DFGPredictionInjectionPhase.cpp
@@ -58,7 +58,7 @@ public:
 #if DFG_ENABLE(DEBUG_VERBOSE)
             dataLog(
                 "Argument [", arg, "] prediction: ",
-                SpeculationDump(m_arguments[arg]->variableAccessData()->prediction()), "\n");
+                SpeculationDump(m_graph.m_arguments[arg]->variableAccessData()->prediction()), "\n");
 #endif
         }
         
